--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Don't include Freya Holmér's Shapes package
+/[As]ssets/Shapes/
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
